# fido2-hid-bridge

./: .gitignore  README.md  flake.nix  pyproject.toml
fido2_hid_bridge/: console.py
